Start work on user management

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ tcl/
 pip-selfcheck.json
 src/server/server/__pycache__/
 src/server/db.sqlite3
+src/server/shop/__pycache__/
+src/server/shop/migrations/__pycache__/
